--- a/package.json
+++ b/package.json
@@ -9,13 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/button": "^0.0.8",
+    "@react-email/components": "^0.0.6",
+    "@react-email/html": "^0.0.4",
+    "@sendgrid/mail": "^7.7.0",
+    "@studio-freight/lenis": "^1.0.11",
     "autoprefixer": "10.4.14",
+    "axios": "^1.3.6",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "gsap": "^3.11.5",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-email": "^1.9.3",
+    "react-icons": "^4.8.0",
+    "react-select": "^5.7.2",
+    "tailwindcss": "3.3.2",
+    "zod": "^3.21.4"
   }
 }
