--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_SENDGRID_API_KEY = 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
+NEXT_PUBLIC_SENDGRID_API_KEY = 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
