--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_SENDGRID_API_KEY = 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
+NEXT_PUBLIC_SENDGRID_API_KEY = 
