--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-email": "^1.9.3",
     "react-icons": "^4.8.0",
     "react-select": "^5.7.2",
+    "react-time-picker": "^6.2.0",
     "tailwindcss": "3.3.2",
     "zod": "^3.21.4",
     "zustand": "^4.3.8"
