--- a/package.json
+++ b/package.json
@@ -13,21 +13,26 @@
     "@react-email/components": "^0.0.6",
     "@react-email/html": "^0.0.4",
     "@sendgrid/mail": "^7.7.0",
+    "@stripe/react-stripe-js": "^2.1.1",
+    "@stripe/stripe-js": "^1.54.1",
     "@studio-freight/lenis": "^1.0.11",
     "autoprefixer": "10.4.14",
     "axios": "^1.3.6",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "gsap": "^3.11.5",
+    "micro": "^10.0.1",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-email": "^1.9.3",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-select": "^5.7.2",
     "react-time-picker": "^6.2.0",
+    "stripe": "^12.9.0",
     "tailwindcss": "3.3.2",
     "zod": "^3.21.4",
     "zustand": "^4.3.8"
